# pydantic-ai-examples

./: README.md
bank-support/: README.md
chat-app/: .chat_app_messages.sqlite  README.md  chat_app.html  chat_app.py  chat_app.ts  main.py  pyproject.toml
examples/bank-support/: main.py
examples/chat-app/: chat_app.ts
examples/flight-booking/: main.py
examples/pydantic-usage/: README.md  main.py
examples/question-graph/: question_graph.json
examples/sql-generation/: README.md  main.py  pyproject.toml
examples/stream-whales/: README.md
examples/weather-agent/: README.md  pyproject.toml
flight-booking/: README.md
pydantic-usage/: main.py
question-graph/: README.md  main.py
sql-generation/: main.py
stream-markdown/: README.md  main.py
stream-whales/: main.py  pyproject.toml
weather-agent/: main.py
